# ai_portfolio

module3/: mod3_asmt2_JA.ipynb
module4/: Dockerfile  README.md  mod4_asmt3_JA.ipynb  mod4_asmt3_JA.py  requirements.txt
module5/: mod5_assnt4.ipynb
module6/: mongo_mod6_asmt6.ipynb  neo4jdating_mod6_asmt6.ipynb
module9/: mod9_asnmt9.ipynb
system_project/: pyproject.toml  utils.py
