[tool.poetry]
name = "neural_operator"
version = "0.1.0"
description = "env for neural operator research"
authors = ["Junaid <junaid.ahmed@bluelightai.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.0"
numpy = "^1.23.3"
networkx = "^2.8.6"
anndata = "^0.8.0"
scanpy = "^1.9.1"
ipywidgets = "^8.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
